<resources>
    <string name="app_name">AgendaDS</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="edit_contact">Editar</string>
    <string name="remove_contact">Eliminar</string>
    <string name="nombre_hint">nombre</string>
    <string name="apellido_hint">apellido</string>
    <string name="direccion_label">Dirección</string>
    <string name="direccion_hint">dirección</string>
    <string name="telefono_label">Número de teléfono</string>
    <string name="telefono_hint">número de teléfono</string>
    <string name="tono_label">Tono</string>
    <string name="tono_hint">tono personalizado</string>
    <string name="email_label">Correo electrónico</string>
    <string name="email">correo electrónico</string>
    <string name="title_activity_contact_form">ContactFormActivity</string>
    <string name="new_contact">Nuevo contacto</string>
    <string name="ten_contacts">Añadir 10 contactos</string>
    <string name="export_contacts">Exportar contactos a sd</string>
    <string name="action_settings">Configuración</string>
</resources>
